--- a/get_coordinates_from_address.ipynb
+++ b/get_coordinates_from_address.ipynb
@@ -126,8 +126,47 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 33,
+   "id": "6bcaa475",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'LocationResult': [{'Municipality': 'Essen',\n",
+       "   'Zipcode': '2910',\n",
+       "   'Thoroughfarename': 'Sint-Antoniusplein',\n",
+       "   'Housenumber': '19',\n",
+       "   'ID': 1530410,\n",
+       "   'FormattedAddress': 'Sint-Antoniusplein 19, 2910 Essen',\n",
+       "   'Location': {'Lat_WGS84': 51.46162820790422,\n",
+       "    'Lon_WGS84': 4.454437781233087,\n",
+       "    'X_Lambert72': 155954.89,\n",
+       "    'Y_Lambert72': 239115.28},\n",
+       "   'LocationType': 'crab_huisnummer_afgeleidVanGebouw',\n",
+       "   'BoundingBox': {'LowerLeft': {'Lat_WGS84': 51.46162820790422,\n",
+       "     'Lon_WGS84': 4.454437781233087,\n",
+       "     'X_Lambert72': 155954.89,\n",
+       "     'Y_Lambert72': 239115.28},\n",
+       "    'UpperRight': {'Lat_WGS84': 51.46162820790422,\n",
+       "     'Lon_WGS84': 4.454437781233087,\n",
+       "     'X_Lambert72': 155954.89,\n",
+       "     'Y_Lambert72': 239115.28}}}]}"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "req"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 22,
-   "id": "0c4ae0ab",
+   "id": "6de09e2a",
    "metadata": {},
    "outputs": [
     {
@@ -176,7 +215,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "34d02f7e",
+   "id": "570b2200",
    "metadata": {},
    "outputs": [
     {
@@ -272,6 +311,28 @@
     "# Plot polygon\n",
     "poly = info['polygon'][0]['coordinates'][0]\n",
     "poly"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "7803759b",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'Polygon' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_33416/3661448941.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mPolygon\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mpoly\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m: name 'Polygon' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "Polygon(poly)"
    ]
   },
   {
