--- a/draw_polygons.ipynb
+++ b/draw_polygons.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "45f02317",
+   "execution_count": 12,
+   "id": "ec63a190",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,8 +12,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "19994842",
+   "execution_count": 13,
+   "id": "7541c735",
    "metadata": {
     "scrolled": true
    },
@@ -33,7 +33,7 @@
        " [155964.90004737675, 239116.14077588543]]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -54,8 +54,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "8a397d02",
+   "execution_count": 14,
+   "id": "87c8dac4",
    "metadata": {},
    "outputs": [
     {
@@ -64,10 +64,10 @@
        "<svg xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\" width=\"100.0\" height=\"100.0\" viewBox=\"155940.3508556789 239106.39606419636 25.49339137854986 17.753359372494742\" preserveAspectRatio=\"xMinYMin meet\"><g transform=\"matrix(1,0,0,-1,0,478230.5454877652)\"><path fill-rule=\"evenodd\" fill=\"#66cc99\" stroke=\"#555555\" stroke-width=\"0.5098678275709971\" opacity=\"0.6\" d=\"M 155964.90004737675,239116.14077588543 L 155962.14139137417,239123.20522388816 L 155955.17511937022,239120.49066388607 L 155956.10887937248,239118.19888788462 L 155951.22401537,239116.56688788533 L 155952.00340736657,239114.54832788184 L 155941.2950553596,239110.34160787985 L 155942.54151935875,239107.34026387706 L 155948.70471936464,239109.76618387923 L 155964.90004737675,239116.14077588543 z\" /></g></svg>"
       ],
       "text/plain": [
-       "<shapely.geometry.polygon.Polygon at 0x1f8c9dd3b48>"
+       "<shapely.geometry.polygon.Polygon at 0x1f8c9f359c8>"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -79,7 +79,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b9cafe99",
+   "id": "8e2935de",
    "metadata": {},
    "outputs": [],
    "source": []
