plotted selected house in 3D successfully

--- a/get_coordinates_from_address.ipynb
+++ b/get_coordinates_from_address.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 89,
    "id": "3ddd25ee",
    "metadata": {},
    "outputs": [
@@ -21,7 +21,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'SuggestionResult': ['Sint-Antoniusplein 19, 2910 Essen']}\n"
+      "{'SuggestionResult': ['Hofstraat 37, 2910 Essen']}\n"
      ]
     }
    ],
@@ -29,7 +29,7 @@
     "url = \"http://loc.geopunt.be/geolocation/suggestion?q=Trambergstraat 10\"\n",
     "url = \"https://loc.geopunt.be/v4/suggestion?q=Trambergstraat 10\"\n",
     "url = \"https://loc.geopunt.be/v4/suggestion?q=Sint-Antoniusplein 19, 2910 Essen\"\n",
-    "\n",
+    "url = \"https://loc.geopunt.be/v4/suggestion?q=Hofstraat 37, 2910 Essen\"\n",
     "response = requests.get(url)\n",
     "\n",
     "# Here the response format is a json file, it is used as a dictionary\n",
@@ -74,25 +74,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 90,
    "id": "bc4fa406",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'address': 'Sint-Antoniusplein 19, 2910 Essen', 'x_value': 155954.89, 'y_value': 239115.28, 'street': 'Sint-Antoniusplein', 'house_number': '19', 'postcode': '2910', 'municipality': 'Essen', 'polygon': [{'coordinates': [[[155964.90004737675, 239116.14077588543], [155962.14139137417, 239123.20522388816], [155955.17511937022, 239120.49066388607], [155956.10887937248, 239118.19888788462], [155951.22401537, 239116.56688788533], [155952.00340736657, 239114.54832788184], [155941.2950553596, 239110.34160787985], [155942.54151935875, 239107.34026387706], [155948.70471936464, 239109.76618387923], [155964.90004737675, 239116.14077588543]]], 'type': 'Polygon'}]}\n",
-      "{'adresMatches': [{'identificator': {'id': 'https://data.vlaanderen.be/id/adres/1681303', 'naamruimte': 'https://data.vlaanderen.be/id/adres', 'objectId': '1681303', 'versieId': '2011-04-29T15:04:42+02:00'}, 'detail': 'https://api.basisregisters.vlaanderen.be/v1/adressen/1681303', 'gemeente': {'objectId': '11016', 'detail': 'https://api.basisregisters.vlaanderen.be/v1/gemeenten/11016', 'gemeentenaam': {'geografischeNaam': {'spelling': 'Essen', 'taal': 'nl'}}}, 'postinfo': {'objectId': '2910', 'detail': 'https://api.basisregisters.vlaanderen.be/v1/postinfo/2910'}, 'straatnaam': {'objectId': '4813', 'detail': 'https://api.basisregisters.vlaanderen.be/v1/straatnamen/4813', 'straatnaam': {'geografischeNaam': {'spelling': 'Sint-Antoniusplein', 'taal': 'nl'}}}, 'huisnummer': '19', 'volledigAdres': {'geografischeNaam': {'spelling': 'Sint-Antoniusplein 19, 2910 Essen', 'taal': 'nl'}}, 'adresPositie': {'point': {'coordinates': [155954.89, 239115.28], 'type': 'Point'}}, 'positieSpecificatie': 'gebouweenheid', 'positieGeometrieMethode': 'afgeleidVanObject', 'adresStatus': 'inGebruik', 'officieelToegekend': True, 'adresseerbareObjecten': [{'objectType': 'gebouweenheid', 'objectId': '9532152', 'detail': 'https://api.basisregisters.vlaanderen.be/v1/gebouweenheden/9532152'}, {'objectType': 'perceel', 'objectId': '11016E0738-00L004', 'detail': 'https://api.basisregisters.vlaanderen.be/v1/percelen/11016E0738-00L004'}], 'score': 100.0}, {'identificator': {'id': 'https://data.vlaanderen.be/id/adres/4742966', 'naamruimte': 'https://data.vlaanderen.be/id/adres', 'objectId': '4742966', 'versieId': '2011-04-29T15:34:02+02:00'}, 'detail': 'https://api.basisregisters.vlaanderen.be/v1/adressen/4742966', 'gemeente': {'objectId': '11016', 'detail': 'https://api.basisregisters.vlaanderen.be/v1/gemeenten/11016', 'gemeentenaam': {'geografischeNaam': {'spelling': 'Essen', 'taal': 'nl'}}}, 'postinfo': {'objectId': '2910', 'detail': 'https://api.basisregisters.vlaanderen.be/v1/postinfo/2910'}, 'straatnaam': {'objectId': '4813', 'detail': 'https://api.basisregisters.vlaanderen.be/v1/straatnamen/4813', 'straatnaam': {'geografischeNaam': {'spelling': 'Sint-Antoniusplein', 'taal': 'nl'}}}, 'huisnummer': '19', 'busnummer': '1', 'volledigAdres': {'geografischeNaam': {'spelling': 'Sint-Antoniusplein 19 bus 1, 2910 Essen', 'taal': 'nl'}}, 'adresPositie': {'point': {'coordinates': [155954.89, 239115.28], 'type': 'Point'}}, 'positieSpecificatie': 'gebouweenheid', 'positieGeometrieMethode': 'afgeleidVanObject', 'adresStatus': 'inGebruik', 'officieelToegekend': True, 'adresseerbareObjecten': [{'objectType': 'gebouweenheid', 'objectId': '9532153', 'detail': 'https://api.basisregisters.vlaanderen.be/v1/gebouweenheden/9532153'}, {'objectType': 'perceel', 'objectId': '11016E0738-00L004', 'detail': 'https://api.basisregisters.vlaanderen.be/v1/percelen/11016E0738-00L004'}], 'score': 90.59794372294373}], 'warnings': []}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "address = \"Kouter 10, 9000 Gent\"\n",
     "address = \"Sint-Antoniusplein 19, 2910 Essen\"\n",
     "# address = \"Limburgstraat 14, 9000 Gent\"\n",
+    "address = \"Hofstraat 37, 2910 Essen\"\n",
     "\n",
     "req = requests.get(f\"https://loc.geopunt.be/v4/Location?q={address}\").json()\n",
     "info = {'address' : address, \n",
@@ -114,34 +106,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
-   "id": "30442764",
+   "execution_count": 95,
+   "id": "6b11d443",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'address': 'Sint-Antoniusplein 19, 2910 Essen',\n",
-       " 'x_value': 155954.89,\n",
-       " 'y_value': 239115.28,\n",
-       " 'street': 'Sint-Antoniusplein',\n",
-       " 'house_number': '19',\n",
+       "{'LocationResult': [{'Municipality': 'Essen',\n",
+       "   'Zipcode': '2910',\n",
+       "   'Thoroughfarename': 'Hofstraat',\n",
+       "   'Housenumber': '37',\n",
+       "   'ID': 1184174,\n",
+       "   'FormattedAddress': 'Hofstraat 37, 2910 Essen',\n",
+       "   'Location': {'Lat_WGS84': 51.46405775720151,\n",
+       "    'Lon_WGS84': 4.466173828750341,\n",
+       "    'X_Lambert72': 156770.24,\n",
+       "    'Y_Lambert72': 239386.62},\n",
+       "   'LocationType': 'crab_huisnummer_afgeleidVanGebouw',\n",
+       "   'BoundingBox': {'LowerLeft': {'Lat_WGS84': 51.46405775720151,\n",
+       "     'Lon_WGS84': 4.466173828750341,\n",
+       "     'X_Lambert72': 156770.24,\n",
+       "     'Y_Lambert72': 239386.62},\n",
+       "    'UpperRight': {'Lat_WGS84': 51.46405775720151,\n",
+       "     'Lon_WGS84': 4.466173828750341,\n",
+       "     'X_Lambert72': 156770.24,\n",
+       "     'Y_Lambert72': 239386.62}}}]}"
+      ]
+     },
+     "execution_count": 95,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "req"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "id": "48aa6e5b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'address': 'Hofstraat 37, 2910 Essen',\n",
+       " 'x_value': 156770.24,\n",
+       " 'y_value': 239386.62,\n",
+       " 'street': 'Hofstraat',\n",
+       " 'house_number': '37',\n",
        " 'postcode': '2910',\n",
        " 'municipality': 'Essen',\n",
-       " 'polygon': [{'coordinates': [[[155964.90004737675, 239116.14077588543],\n",
-       "     [155962.14139137417, 239123.20522388816],\n",
-       "     [155955.17511937022, 239120.49066388607],\n",
-       "     [155956.10887937248, 239118.19888788462],\n",
-       "     [155951.22401537, 239116.56688788533],\n",
-       "     [155952.00340736657, 239114.54832788184],\n",
-       "     [155941.2950553596, 239110.34160787985],\n",
-       "     [155942.54151935875, 239107.34026387706],\n",
-       "     [155948.70471936464, 239109.76618387923],\n",
-       "     [155964.90004737675, 239116.14077588543]]],\n",
+       " 'polygon': [{'coordinates': [[[156756.23355191946, 239387.70288807154],\n",
+       "     [156761.3869599253, 239376.37066406384],\n",
+       "     [156767.87143993378, 239379.28983206674],\n",
+       "     [156768.62420792878, 239377.63709606603],\n",
+       "     [156770.79508793354, 239376.7989520654],\n",
+       "     [156773.09806393832, 239377.96093606576],\n",
+       "     [156773.7593119368, 239379.8987280652],\n",
+       "     [156772.9146399349, 239381.6417040676],\n",
+       "     [156783.99508794397, 239386.78576807305],\n",
+       "     [156778.73275193572, 239398.19453607872],\n",
+       "     [156771.1684639305, 239394.66288807616],\n",
+       "     [156771.95361593366, 239393.34615207464],\n",
+       "     [156764.3418399319, 239389.92445607483],\n",
+       "     [156763.67150393128, 239391.2441360727],\n",
+       "     [156756.23355191946, 239387.70288807154]]],\n",
        "   'type': 'Polygon'}]}"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 91,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -152,26 +188,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 92,
    "id": "69e606ff",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[[155964.90004737675, 239116.14077588543],\n",
-       " [155962.14139137417, 239123.20522388816],\n",
-       " [155955.17511937022, 239120.49066388607],\n",
-       " [155956.10887937248, 239118.19888788462],\n",
-       " [155951.22401537, 239116.56688788533],\n",
-       " [155952.00340736657, 239114.54832788184],\n",
-       " [155941.2950553596, 239110.34160787985],\n",
-       " [155942.54151935875, 239107.34026387706],\n",
-       " [155948.70471936464, 239109.76618387923],\n",
-       " [155964.90004737675, 239116.14077588543]]"
+       "[[156756.23355191946, 239387.70288807154],\n",
+       " [156761.3869599253, 239376.37066406384],\n",
+       " [156767.87143993378, 239379.28983206674],\n",
+       " [156768.62420792878, 239377.63709606603],\n",
+       " [156770.79508793354, 239376.7989520654],\n",
+       " [156773.09806393832, 239377.96093606576],\n",
+       " [156773.7593119368, 239379.8987280652],\n",
+       " [156772.9146399349, 239381.6417040676],\n",
+       " [156783.99508794397, 239386.78576807305],\n",
+       " [156778.73275193572, 239398.19453607872],\n",
+       " [156771.1684639305, 239394.66288807616],\n",
+       " [156771.95361593366, 239393.34615207464],\n",
+       " [156764.3418399319, 239389.92445607483],\n",
+       " [156763.67150393128, 239391.2441360727],\n",
+       " [156756.23355191946, 239387.70288807154]]"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 92,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -184,20 +225,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 93,
    "id": "695aa1a2",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "image/svg+xml": [
-       "<svg xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\" width=\"100.0\" height=\"100.0\" viewBox=\"155940.3508556789 239106.39606419636 25.49339137854986 17.753359372494742\" preserveAspectRatio=\"xMinYMin meet\"><g transform=\"matrix(1,0,0,-1,0,478230.5454877652)\"><path fill-rule=\"evenodd\" fill=\"#66cc99\" stroke=\"#555555\" stroke-width=\"0.5098678275709971\" opacity=\"0.6\" d=\"M 155964.90004737675,239116.14077588543 L 155962.14139137417,239123.20522388816 L 155955.17511937022,239120.49066388607 L 155956.10887937248,239118.19888788462 L 155951.22401537,239116.56688788533 L 155952.00340736657,239114.54832788184 L 155941.2950553596,239110.34160787985 L 155942.54151935875,239107.34026387706 L 155948.70471936464,239109.76618387923 L 155964.90004737675,239116.14077588543 z\" /></g></svg>"
+       "<svg xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\" width=\"100.0\" height=\"100.0\" viewBox=\"156755.12309047848 239375.26020262286 29.982458906481043 24.044794896850362\" preserveAspectRatio=\"xMinYMin meet\"><g transform=\"matrix(1,0,0,-1,0,478774.56520014256)\"><path fill-rule=\"evenodd\" fill=\"#66cc99\" stroke=\"#555555\" stroke-width=\"0.5996491781296208\" opacity=\"0.6\" d=\"M 156756.23355191946,239387.70288807154 L 156761.3869599253,239376.37066406384 L 156767.87143993378,239379.28983206674 L 156768.62420792878,239377.63709606603 L 156770.79508793354,239376.7989520654 L 156773.09806393832,239377.96093606576 L 156773.7593119368,239379.8987280652 L 156772.9146399349,239381.6417040676 L 156783.99508794397,239386.78576807305 L 156778.73275193572,239398.19453607872 L 156771.1684639305,239394.66288807616 L 156771.95361593366,239393.34615207464 L 156764.3418399319,239389.92445607483 L 156763.67150393128,239391.2441360727 L 156756.23355191946,239387.70288807154 z\" /></g></svg>"
       ],
       "text/plain": [
-       "<shapely.geometry.polygon.Polygon at 0x21baac8a308>"
+       "<shapely.geometry.polygon.Polygon at 0x21baac87548>"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 93,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -217,7 +258,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ce91233f",
+   "id": "801c61a3",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -225,7 +266,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2dc340ff",
+   "id": "54a1594b",
    "metadata": {},
    "outputs": [],
    "source": []
