--- a/load_tiff_from_zip.ipynb
+++ b/load_tiff_from_zip.ipynb
@@ -89,7 +89,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "9a012ff7",
+   "id": "8a887c8b",
    "metadata": {},
    "outputs": [
     {
@@ -227,7 +227,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "68bfd1c4",
+   "id": "ea1441da",
    "metadata": {},
    "outputs": [
     {
@@ -253,7 +253,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "b845e030",
+   "id": "f243f229",
    "metadata": {},
    "outputs": [
     {
@@ -284,7 +284,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "15b756d8",
+   "id": "e857d60a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -297,7 +297,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "d4b38db7",
+   "id": "fdc15755",
    "metadata": {},
    "outputs": [
     {
@@ -318,7 +318,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "4af9e0c4",
+   "id": "f5a526dd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -328,7 +328,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "baa37866",
+   "id": "57a85aeb",
    "metadata": {},
    "outputs": [
     {
@@ -349,7 +349,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "c8cb796c",
+   "id": "66a35635",
    "metadata": {},
    "outputs": [
     {
@@ -370,8 +370,10 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "f7b1e04e",
-   "metadata": {},
+   "id": "3c79b35e",
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -398,6 +400,27 @@
    ],
    "source": [
     "rasterio.plot.show(img_DTM)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "id": "2c7e9fa9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<module 'gdal' from 'C:\\\\Users\\\\ecebo\\\\anaconda3\\\\envs\\\\houses_3d\\\\lib\\\\site-packages\\\\gdal.py'>"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "gdal"
    ]
   }
  ],
