draw 3D image cropped by polygon

--- a/get_coordinates_from_address.ipynb
+++ b/get_coordinates_from_address.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 2,
    "id": "6296d291",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 3,
    "id": "3ddd25ee",
    "metadata": {},
    "outputs": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 4,
    "id": "ff79b2c4",
    "metadata": {},
    "outputs": [
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 8,
    "id": "bc4fa406",
    "metadata": {
     "scrolled": true
@@ -85,6 +85,7 @@
     "address = \"Sint-Antoniusplein 19, 2910 Essen\"\n",
     "# address = \"Limburgstraat 14, 9000 Gent\"\n",
     "address = \"Hofstraat 37, 2910 Essen\"\n",
+    "address = \"Elzendreef 14, 2910 Essen\"\n",
     "\n",
     "req = requests.get(f\"https://loc.geopunt.be/v4/Location?q={address}\").json()\n",
     "info = {'address' : address, \n",
@@ -106,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 9,
    "id": "db453b7b",
    "metadata": {},
    "outputs": [
@@ -115,26 +116,26 @@
       "text/plain": [
        "{'LocationResult': [{'Municipality': 'Essen',\n",
        "   'Zipcode': '2910',\n",
-       "   'Thoroughfarename': 'Hofstraat',\n",
-       "   'Housenumber': '37',\n",
-       "   'ID': 1184174,\n",
-       "   'FormattedAddress': 'Hofstraat 37, 2910 Essen',\n",
-       "   'Location': {'Lat_WGS84': 51.46405775720151,\n",
-       "    'Lon_WGS84': 4.466173828750341,\n",
-       "    'X_Lambert72': 156770.24,\n",
-       "    'Y_Lambert72': 239386.62},\n",
+       "   'Thoroughfarename': 'Elzendreef',\n",
+       "   'Housenumber': '14',\n",
+       "   'ID': 1219931,\n",
+       "   'FormattedAddress': 'Elzendreef 14, 2910 Essen',\n",
+       "   'Location': {'Lat_WGS84': 51.45553140760153,\n",
+       "    'Lon_WGS84': 4.439196884648804,\n",
+       "    'X_Lambert72': 154896.23,\n",
+       "    'Y_Lambert72': 238435.79},\n",
        "   'LocationType': 'crab_huisnummer_afgeleidVanGebouw',\n",
-       "   'BoundingBox': {'LowerLeft': {'Lat_WGS84': 51.46405775720151,\n",
-       "     'Lon_WGS84': 4.466173828750341,\n",
-       "     'X_Lambert72': 156770.24,\n",
-       "     'Y_Lambert72': 239386.62},\n",
-       "    'UpperRight': {'Lat_WGS84': 51.46405775720151,\n",
-       "     'Lon_WGS84': 4.466173828750341,\n",
-       "     'X_Lambert72': 156770.24,\n",
-       "     'Y_Lambert72': 239386.62}}}]}"
+       "   'BoundingBox': {'LowerLeft': {'Lat_WGS84': 51.45553140760153,\n",
+       "     'Lon_WGS84': 4.439196884648804,\n",
+       "     'X_Lambert72': 154896.23,\n",
+       "     'Y_Lambert72': 238435.79},\n",
+       "    'UpperRight': {'Lat_WGS84': 51.45553140760153,\n",
+       "     'Lon_WGS84': 4.439196884648804,\n",
+       "     'X_Lambert72': 154896.23,\n",
+       "     'Y_Lambert72': 238435.79}}}]}"
       ]
      },
-     "execution_count": 95,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -145,39 +146,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 10,
    "id": "dcda8f3f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'address': 'Hofstraat 37, 2910 Essen',\n",
-       " 'x_value': 156770.24,\n",
-       " 'y_value': 239386.62,\n",
-       " 'street': 'Hofstraat',\n",
-       " 'house_number': '37',\n",
+       "{'address': 'Elzendreef 14, 2910 Essen',\n",
+       " 'x_value': 154896.23,\n",
+       " 'y_value': 238435.79,\n",
+       " 'street': 'Elzendreef',\n",
+       " 'house_number': '14',\n",
        " 'postcode': '2910',\n",
        " 'municipality': 'Essen',\n",
-       " 'polygon': [{'coordinates': [[[156756.23355191946, 239387.70288807154],\n",
-       "     [156761.3869599253, 239376.37066406384],\n",
-       "     [156767.87143993378, 239379.28983206674],\n",
-       "     [156768.62420792878, 239377.63709606603],\n",
-       "     [156770.79508793354, 239376.7989520654],\n",
-       "     [156773.09806393832, 239377.96093606576],\n",
-       "     [156773.7593119368, 239379.8987280652],\n",
-       "     [156772.9146399349, 239381.6417040676],\n",
-       "     [156783.99508794397, 239386.78576807305],\n",
-       "     [156778.73275193572, 239398.19453607872],\n",
-       "     [156771.1684639305, 239394.66288807616],\n",
-       "     [156771.95361593366, 239393.34615207464],\n",
-       "     [156764.3418399319, 239389.92445607483],\n",
-       "     [156763.67150393128, 239391.2441360727],\n",
-       "     [156756.23355191946, 239387.70288807154]]],\n",
+       " 'polygon': [{'coordinates': [[[154903.46516664326, 238441.10026341677],\n",
+       "     [154900.6807826385, 238447.15248742327],\n",
+       "     [154894.67809463292, 238444.41315941885],\n",
+       "     [154896.5193746388, 238440.5250314176],\n",
+       "     [154891.68059063703, 238438.12477541715],\n",
+       "     [154890.47316662967, 238440.83760741726],\n",
+       "     [154883.6819986254, 238437.6483594142],\n",
+       "     [154888.88417463005, 238426.53219940886],\n",
+       "     [154899.87745463848, 238431.69239141047],\n",
+       "     [154901.75675064325, 238427.712615408],\n",
+       "     [154907.2643346414, 238430.41623140872],\n",
+       "     [154904.82683064044, 238435.2454154119],\n",
+       "     [154906.65595064312, 238436.14640741423],\n",
+       "     [154904.11771064252, 238441.41667941958],\n",
+       "     [154903.46516664326, 238441.10026341677]]],\n",
        "   'type': 'Polygon'}]}"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
