--- a/draw_polygons.ipynb
+++ b/draw_polygons.ipynb
@@ -35,30 +35,29 @@
    "outputs": [],
    "source": [
     "import matplotlib\n",
-    "%matplotlib inline\n",
+    "#%matplotlib inline\n",
     "import matplotlib.pyplot as plt"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "e050d5e9",
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'plt' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_51784/1859966962.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mplt\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m: name 'plt' is not defined"
-     ]
+     "data": {
+      "text/plain": [
+       "[<matplotlib.lines.Line2D at 0x1f6443dccc8>]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "plt"
+    "plt.plot([1,2,3])"
    ]
   },
   {
