metadata complete, working on addresses

--- a/plot_single_file.ipynb
+++ b/plot_single_file.ipynb
@@ -511,10 +511,7 @@
     "            all_polygons = shapely.geometry.MultiPolygon([all_polygons])\n",
     "    return all_polygons\n",
     "\n",
-    "polygons = mask_to_polygons_layer(threshold)\n",
-    "\n",
-    "\n",
-    "\n"
+    "polygons = mask_to_polygons_layer(threshold)"
    ]
   },
   {
