--- a/get_coordinates_from_address.ipynb
+++ b/get_coordinates_from_address.ipynb
@@ -2,18 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "6296d291",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import requests\n",
-    "import shapely.geometry as geom\n"
+    "# Import necessary libraries\n",
+    "import requests as req\n",
+    "\n",
+    "#import shapely.geometry as geom\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "3ddd25ee",
    "metadata": {},
    "outputs": [
@@ -21,7 +23,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'SuggestionResult': ['Hofstraat 37, 2910 Essen']}\n"
+      "{'SuggestionResult': ['Elzendreef 14, 2910 Essen']}\n"
      ]
     }
    ],
@@ -30,7 +32,9 @@
     "url = \"https://loc.geopunt.be/v4/suggestion?q=Trambergstraat 10\"\n",
     "url = \"https://loc.geopunt.be/v4/suggestion?q=Sint-Antoniusplein 19, 2910 Essen\"\n",
     "url = \"https://loc.geopunt.be/v4/suggestion?q=Hofstraat 37, 2910 Essen\"\n",
-    "response = requests.get(url)\n",
+    "url = \"https://loc.geopunt.be/v4/suggestion?q=Elzendreef 14, 2910 Essen\"\n",
+    "\n",
+    "response = req.get(url)\n",
     "\n",
     "# Here the response format is a json file, it is used as a dictionary\n",
     "print(response.json())"
@@ -38,7 +42,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
+   "id": "e3f96620",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(response)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "id": "ff79b2c4",
    "metadata": {},
    "outputs": [
@@ -60,7 +82,7 @@
     "url = f\"https://loc.geopunt.be/v4/Location?q={address}\"\n",
     "\n",
     "\n",
-    "response = requests.get(url)\n",
+    "response = req.get(url)\n",
     "response = response.json()\n",
     "\n",
     "\n",
@@ -74,12 +96,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "id": "bc4fa406",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "get() takes no keyword arguments",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_23284/342919867.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     17\u001b[0m                       params={\"postcode\": info['postcode'], \n\u001b[0;32m     18\u001b[0m                       \u001b[1;34m\"straatnaam\"\u001b[0m\u001b[1;33m:\u001b[0m \u001b[0minfo\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'street'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 19\u001b[1;33m                       \"huisnummer\": info['house_number']}).json()\n\u001b[0m\u001b[0;32m     20\u001b[0m \u001b[0mbuilding\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mreq\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mget\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdetail\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'adresMatches'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'adresseerbareObjecten'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'detail'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mjson\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     21\u001b[0m \u001b[0mbuild\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mreq\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mget\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mbuilding\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'gebouw'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'detail'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mjson\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mTypeError\u001b[0m: get() takes no keyword arguments"
+     ]
+    }
+   ],
    "source": [
     "address = \"Kouter 10, 9000 Gent\"\n",
     "address = \"Sint-Antoniusplein 19, 2910 Essen\"\n",
@@ -87,7 +121,7 @@
     "address = \"Hofstraat 37, 2910 Essen\"\n",
     "address = \"Elzendreef 14, 2910 Essen\"\n",
     "\n",
-    "req = requests.get(f\"https://loc.geopunt.be/v4/Location?q={address}\").json()\n",
+    "req = req.get(f\"https://loc.geopunt.be/v4/Location?q={address}\").json()\n",
     "info = {'address' : address, \n",
     "        'x_value' : req['LocationResult'][0]['Location']['X_Lambert72'],\n",
     "        'y_value' : req['LocationResult'][0]['Location']['Y_Lambert72'],\n",
@@ -96,18 +130,18 @@
     "        'postcode': req['LocationResult'][0]['Zipcode'], \n",
     "        'municipality' : req['LocationResult'][0]['Municipality']}\n",
     "    \n",
-    "detail = requests.get(\"https://api.basisregisters.vlaanderen.be/v1/adresmatch\",\n",
+    "detail = req.get(\"https://api.basisregisters.vlaanderen.be/v1/adresmatch\",\n",
     "                      params={\"postcode\": info['postcode'], \n",
     "                      \"straatnaam\": info['street'],\n",
     "                      \"huisnummer\": info['house_number']}).json()\n",
-    "building = requests.get(detail['adresMatches'][0]['adresseerbareObjecten'][0]['detail']).json()\n",
-    "build = requests.get(building['gebouw']['detail']).json()\n",
+    "building = req.get(detail['adresMatches'][0]['adresseerbareObjecten'][0]['detail']).json()\n",
+    "build = req.get(building['gebouw']['detail']).json()\n",
     "info['polygon'] = [build['geometriePolygoon']['polygon']]\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "id": "db453b7b",
    "metadata": {},
    "outputs": [
@@ -135,7 +169,7 @@
        "     'Y_Lambert72': 238435.79}}}]}"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -146,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "id": "dcda8f3f",
    "metadata": {},
    "outputs": [
@@ -159,26 +193,10 @@
        " 'street': 'Elzendreef',\n",
        " 'house_number': '14',\n",
        " 'postcode': '2910',\n",
-       " 'municipality': 'Essen',\n",
-       " 'polygon': [{'coordinates': [[[154903.46516664326, 238441.10026341677],\n",
-       "     [154900.6807826385, 238447.15248742327],\n",
-       "     [154894.67809463292, 238444.41315941885],\n",
-       "     [154896.5193746388, 238440.5250314176],\n",
-       "     [154891.68059063703, 238438.12477541715],\n",
-       "     [154890.47316662967, 238440.83760741726],\n",
-       "     [154883.6819986254, 238437.6483594142],\n",
-       "     [154888.88417463005, 238426.53219940886],\n",
-       "     [154899.87745463848, 238431.69239141047],\n",
-       "     [154901.75675064325, 238427.712615408],\n",
-       "     [154907.2643346414, 238430.41623140872],\n",
-       "     [154904.82683064044, 238435.2454154119],\n",
-       "     [154906.65595064312, 238436.14640741423],\n",
-       "     [154904.11771064252, 238441.41667941958],\n",
-       "     [154903.46516664326, 238441.10026341677]]],\n",
-       "   'type': 'Polygon'}]}"
+       " 'municipality': 'Essen'}"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -189,33 +207,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 7,
    "id": "69e606ff",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[[156756.23355191946, 239387.70288807154],\n",
-       " [156761.3869599253, 239376.37066406384],\n",
-       " [156767.87143993378, 239379.28983206674],\n",
-       " [156768.62420792878, 239377.63709606603],\n",
-       " [156770.79508793354, 239376.7989520654],\n",
-       " [156773.09806393832, 239377.96093606576],\n",
-       " [156773.7593119368, 239379.8987280652],\n",
-       " [156772.9146399349, 239381.6417040676],\n",
-       " [156783.99508794397, 239386.78576807305],\n",
-       " [156778.73275193572, 239398.19453607872],\n",
-       " [156771.1684639305, 239394.66288807616],\n",
-       " [156771.95361593366, 239393.34615207464],\n",
-       " [156764.3418399319, 239389.92445607483],\n",
-       " [156763.67150393128, 239391.2441360727],\n",
-       " [156756.23355191946, 239387.70288807154]]"
-      ]
-     },
-     "execution_count": 92,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "KeyError",
+     "evalue": "'polygon'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_23284/703538438.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m# Plot polygon\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mpoly_building\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0minfo\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'polygon'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'coordinates'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m \u001b[0mpoly_building\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mKeyError\u001b[0m: 'polygon'"
+     ]
     }
    ],
    "source": [
