--- a/get_coordinates_from_address.ipynb
+++ b/get_coordinates_from_address.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "id": "6296d291",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
+   "id": "f79ba032",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "id": "3ddd25ee",
    "metadata": {},
    "outputs": [
@@ -50,7 +58,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "None\n"
+      "<Response [200]>\n"
      ]
     }
    ],
@@ -60,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "id": "ff79b2c4",
    "metadata": {},
    "outputs": [
@@ -96,21 +104,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
    "id": "bc4fa406",
    "metadata": {
     "scrolled": true
    },
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "get() takes no keyword arguments",
+     "ename": "AttributeError",
+     "evalue": "'NoneType' object has no attribute 'json'",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_23284/342919867.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     17\u001b[0m                       params={\"postcode\": info['postcode'], \n\u001b[0;32m     18\u001b[0m                       \u001b[1;34m\"straatnaam\"\u001b[0m\u001b[1;33m:\u001b[0m \u001b[0minfo\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'street'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 19\u001b[1;33m                       \"huisnummer\": info['house_number']}).json()\n\u001b[0m\u001b[0;32m     20\u001b[0m \u001b[0mbuilding\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mreq\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mget\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdetail\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'adresMatches'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'adresseerbareObjecten'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'detail'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mjson\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     21\u001b[0m \u001b[0mbuild\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mreq\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mget\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mbuilding\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'gebouw'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'detail'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mjson\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mTypeError\u001b[0m: get() takes no keyword arguments"
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_31976/342919867.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[0maddress\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m\"Elzendreef 14, 2910 Essen\"\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 7\u001b[1;33m \u001b[0mreq\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mreq\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mget\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34mf\"https://loc.geopunt.be/v4/Location?q={address}\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mjson\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      8\u001b[0m info = {'address' : address, \n\u001b[0;32m      9\u001b[0m         \u001b[1;34m'x_value'\u001b[0m \u001b[1;33m:\u001b[0m \u001b[0mreq\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'LocationResult'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'Location'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'X_Lambert72'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'NoneType' object has no attribute 'json'"
      ]
     }
    ],
@@ -141,41 +149,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 16,
    "id": "db453b7b",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "{'LocationResult': [{'Municipality': 'Essen',\n",
-       "   'Zipcode': '2910',\n",
-       "   'Thoroughfarename': 'Elzendreef',\n",
-       "   'Housenumber': '14',\n",
-       "   'ID': 1219931,\n",
-       "   'FormattedAddress': 'Elzendreef 14, 2910 Essen',\n",
-       "   'Location': {'Lat_WGS84': 51.45553140760153,\n",
-       "    'Lon_WGS84': 4.439196884648804,\n",
-       "    'X_Lambert72': 154896.23,\n",
-       "    'Y_Lambert72': 238435.79},\n",
-       "   'LocationType': 'crab_huisnummer_afgeleidVanGebouw',\n",
-       "   'BoundingBox': {'LowerLeft': {'Lat_WGS84': 51.45553140760153,\n",
-       "     'Lon_WGS84': 4.439196884648804,\n",
-       "     'X_Lambert72': 154896.23,\n",
-       "     'Y_Lambert72': 238435.79},\n",
-       "    'UpperRight': {'Lat_WGS84': 51.45553140760153,\n",
-       "     'Lon_WGS84': 4.439196884648804,\n",
-       "     'X_Lambert72': 154896.23,\n",
-       "     'Y_Lambert72': 238435.79}}}]}"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "TypeError",
+     "evalue": "get() takes no keyword arguments",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_31976/3652622767.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      2\u001b[0m                       params={\"postcode\": info['postcode'], \n\u001b[0;32m      3\u001b[0m                       \u001b[1;34m\"straatnaam\"\u001b[0m\u001b[1;33m:\u001b[0m \u001b[0minfo\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'street'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m                       \"huisnummer\": info['house_number']}).json()\n\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m: get() takes no keyword arguments"
+     ]
     }
    ],
    "source": [
-    "req"
+    "detail = req.get(\"https://api.basisregisters.vlaanderen.be/v1/adresmatch\",\n",
+    "                      params={\"postcode\": info['postcode'], \n",
+    "                      \"straatnaam\": info['street'],\n",
+    "                      \"huisnummer\": info['house_number']}).json()"
    ]
   },
   {
