--- a/plot_3d_house_from_address.ipynb
+++ b/plot_3d_house_from_address.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "1dde9318",
+   "execution_count": 76,
+   "id": "113039cc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,8 +13,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
-   "id": "dddfba31",
+   "execution_count": 79,
+   "id": "b56b04e2",
    "metadata": {},
    "outputs": [
     {
@@ -23,7 +23,7 @@
      "text": [
       "['Elzendreef 14, 2910 Essen']\n",
       "True\n",
-      "Elzendreef 14, 2910 Essen\n",
+      "None\n",
       "{'LocationResult': [{'Municipality': 'Essen', 'Zipcode': '2910', 'Thoroughfarename': 'Elzendreef', 'Housenumber': '14', 'ID': 1219931, 'FormattedAddress': 'Elzendreef 14, 2910 Essen', 'Location': {'Lat_WGS84': 51.45553140760153, 'Lon_WGS84': 4.439196884648804, 'X_Lambert72': 154896.23, 'Y_Lambert72': 238435.79}, 'LocationType': 'crab_huisnummer_afgeleidVanGebouw', 'BoundingBox': {'LowerLeft': {'Lat_WGS84': 51.45553140760153, 'Lon_WGS84': 4.439196884648804, 'X_Lambert72': 154896.23, 'Y_Lambert72': 238435.79}, 'UpperRight': {'Lat_WGS84': 51.45553140760153, 'Lon_WGS84': 4.439196884648804, 'X_Lambert72': 154896.23, 'Y_Lambert72': 238435.79}}}]}\n"
      ]
     }
@@ -58,7 +58,7 @@
     "        \n",
     "        # For a valid address, get the location\n",
     "        if self.valid_address_conditional:\n",
-    "            self.address_info = self.get_address_location(self.input_address)\n",
+    "            self.address_info = None # self.get_address_location(self.input_address)\n",
     "        else:\n",
     "            self.address_info = ''\n",
     "            \n",
@@ -101,12 +101,12 @@
     "        url = f\"https://loc.geopunt.be/v4/Location?q={address}&c={no_suggestions}\"\n",
     "        # Get the address suggestions\n",
     "        address_info = req.get(url).json()\n",
-    "        \n",
+    "        print(address_info)\n",
     "        return address_info\n",
     "         \n",
     "    # Run rest of the functions only if self.valid_address_conditional = True\n",
     "\n",
-    "\n",
+    "    \n",
     "input_address = 'Hofstraat 37, 2910 Essen'\n",
     "input_address = 'Elzendreef 14, 2910 Essen'\n",
     "#input_address = 'Elzendreef 14'\n",
@@ -115,13 +115,39 @@
     "\n",
     "my_address = Address(input_address)\n",
     "address_info = my_address.address_info\n",
-    "print(address_info)\n"
+    "print(address_info)\n",
+    "\n",
+    "url = f\"https://loc.geopunt.be/v4/Location?q={input_address}&c={1}\"\n",
+    "address_info = req.get(url).json()\n",
+    "print(address_info)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "949790f2",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "list indices must be integers or slices, not str",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_19836/92137553.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0maddress_info\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'LocationResult'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'Thoroughfarename'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m: list indices must be integers or slices, not str"
+     ]
+    }
+   ],
+   "source": [
+    "address_info['LocationResult']['Thoroughfarename']"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "fe2b0bf5",
+   "id": "33c15e7b",
    "metadata": {},
    "outputs": [
     {
@@ -159,8 +185,36 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 69,
+   "id": "95a27265",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<Response [200]>"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "address = \"Kouter 10, 9000 Gent\"\n",
+    "address = \"Sint-Antoniusplein 19, 2910 Essen\"\n",
+    "# address = \"Limburgstraat 14, 9000 Gent\"\n",
+    "address = \"Hofstraat 37, 2910 Essen\"\n",
+    "address = \"Elzendreef 14, 2910 Essen\"\n",
+    "\n",
+    "response = req.get(f\"https://loc.geopunt.be/v4/Location?q={address}\")\n",
+    "response"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "3349c7f1",
+   "id": "c16329ee",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,7 +245,49 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "88b375a5",
+   "id": "6edb87f3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "gemeentenaam\t\n",
+    "string\n",
+    "De gerelateerde gemeentenaam van de adressen.\n",
+    "\n",
+    "\n",
+    "postcode\t\n",
+    "string\n",
+    "Filter op de postcode van het adres.\n",
+    "\n",
+    "kadStraatcode\t\n",
+    "string\n",
+    "Filter op de straatcode van het kadaster.\n",
+    "\n",
+    "rrStraatcode\t\n",
+    "string\n",
+    "Filter op de straatcode van het rijksregister.\n",
+    "\n",
+    "straatnaam\t\n",
+    "string\n",
+    "Filter op de straatnaam van het adres.\n",
+    "\n",
+    "huisnummer\t\n",
+    "string\n",
+    "Filter op het huisnummer van het adres.\n",
+    "\n",
+    "index\t\n",
+    "string\n",
+    "Filter op het huisnummer gekend in het rijksregister.\n",
+    "\n",
+    "busnummer\t\n",
+    "string\n",
+    "Filter op het busnummer van het adres.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "787509c7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,7 +299,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ecc6e9e3",
+   "id": "365c6687",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,7 +309,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "47ac4b68",
+   "id": "0c8f21a5",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -221,7 +317,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8042131a",
+   "id": "a0b9802d",
    "metadata": {},
    "outputs": [],
    "source": []
