notebook, renamed to main gitignore updated

--- a/create_metadata_dataframe.ipynb
+++ b/create_metadata_dataframe.ipynb
@@ -97,104 +97,10 @@
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "DSM file 0 accessed. Execution time: 20.89\n",
-      "DSM file 1 accessed. Execution time: 21.22\n",
-      "DSM file 2 accessed. Execution time: 39.60\n",
-      "DSM file 3 accessed. Execution time: 39.99\n",
-      "DSM file 4 accessed. Execution time: 113.66\n",
-      "DSM file 5 accessed. Execution time: 141.27\n",
-      "DSM file 6 accessed. Execution time: 141.64\n",
-      "DSM file 7 accessed. Execution time: 142.04\n",
-      "DSM file 8 accessed. Execution time: 142.44\n",
-      "DSM file 9 accessed. Execution time: 142.86\n",
-      "DSM file 10 accessed. Execution time: 168.55\n",
-      "DSM file 11 accessed. Execution time: 342.61\n",
-      "DSM file 12 accessed. Execution time: 343.04\n",
-      "DSM file 13 accessed. Execution time: 343.47\n",
-      "DSM file 14 accessed. Execution time: 343.85\n",
-      "DSM file 15 accessed. Execution time: 344.38\n",
-      "DSM file 16 accessed. Execution time: 344.76\n",
-      "DSM file 17 accessed. Execution time: 345.13\n",
-      "DSM file 18 accessed. Execution time: 345.52\n",
-      "DSM file 19 accessed. Execution time: 345.88\n",
-      "DSM file 20 accessed. Execution time: 346.23\n",
-      "DSM file 21 accessed. Execution time: 346.66\n",
-      "DSM file 22 accessed. Execution time: 468.09\n",
-      "DSM file 23 accessed. Execution time: 599.18\n",
-      "DSM file 24 accessed. Execution time: 599.50\n",
-      "DSM file 25 accessed. Execution time: 599.79\n",
-      "DSM file 26 accessed. Execution time: 600.20\n",
-      "DSM file 27 accessed. Execution time: 600.47\n",
-      "DSM file 28 accessed. Execution time: 600.78\n",
-      "DSM file 29 accessed. Execution time: 601.10\n",
-      "DSM file 30 accessed. Execution time: 770.67\n",
-      "DSM file 31 accessed. Execution time: 903.14\n",
-      "DSM file 32 accessed. Execution time: 903.44\n",
-      "DSM file 33 accessed. Execution time: 903.76\n",
-      "DSM file 34 accessed. Execution time: 904.08\n",
-      "DSM file 35 accessed. Execution time: 904.56\n",
-      "DSM file 36 accessed. Execution time: 904.85\n",
-      "DSM file 37 accessed. Execution time: 905.13\n",
-      "DSM file 38 accessed. Execution time: 905.44\n",
-      "DSM file 39 accessed. Execution time: 906.54\n",
-      "DSM file 40 accessed. Execution time: 906.88\n",
-      "DSM file 41 accessed. Execution time: 907.22\n",
-      "DSM file 42 accessed. Execution time: 907.54\n",
-      "DTM file 0 accessed. Execution time: 926.88\n",
-      "DTM file 1 accessed. Execution time: 927.20\n",
-      "DTM file 2 accessed. Execution time: 944.40\n",
-      "DTM file 3 accessed. Execution time: 945.06\n",
-      "DTM file 4 accessed. Execution time: 945.33\n",
-      "DTM file 5 accessed. Execution time: 945.75\n",
-      "DTM file 6 accessed. Execution time: 946.06\n",
-      "DTM file 7 accessed. Execution time: 946.39\n",
-      "DTM file 8 accessed. Execution time: 946.70\n",
-      "DTM file 9 accessed. Execution time: 947.05\n",
-      "DTM file 10 accessed. Execution time: 957.72\n",
-      "DTM file 11 accessed. Execution time: 1035.63\n",
-      "DTM file 12 accessed. Execution time: 1035.98\n",
-      "DTM file 13 accessed. Execution time: 1036.32\n",
-      "DTM file 14 accessed. Execution time: 1036.66\n",
-      "DTM file 15 accessed. Execution time: 1036.97\n",
-      "DTM file 16 accessed. Execution time: 1037.29\n",
-      "DTM file 17 accessed. Execution time: 1037.69\n",
-      "DTM file 18 accessed. Execution time: 1038.00\n",
-      "DTM file 19 accessed. Execution time: 1038.31\n",
-      "DTM file 20 accessed. Execution time: 1038.59\n",
-      "DTM file 21 accessed. Execution time: 1039.07\n",
-      "DTM file 22 accessed. Execution time: 1039.90\n",
-      "DTM file 23 accessed. Execution time: 1040.77\n",
-      "DTM file 24 accessed. Execution time: 1041.06\n",
-      "DTM file 25 accessed. Execution time: 1041.38\n",
-      "DTM file 26 accessed. Execution time: 1041.73\n",
-      "DTM file 27 accessed. Execution time: 1042.07\n",
-      "DTM file 28 accessed. Execution time: 1042.44\n",
-      "DTM file 29 accessed. Execution time: 1042.72\n",
-      "DTM file 30 accessed. Execution time: 1043.08\n",
-      "DTM file 31 accessed. Execution time: 1142.89\n",
-      "DTM file 32 accessed. Execution time: 1143.20\n",
-      "DTM file 33 accessed. Execution time: 1143.52\n",
-      "DTM file 34 accessed. Execution time: 1152.63\n",
-      "DTM file 35 accessed. Execution time: 1152.94\n",
-      "DTM file 36 accessed. Execution time: 1153.26\n",
-      "DTM file 37 accessed. Execution time: 1153.62\n",
-      "DTM file 38 accessed. Execution time: 1153.88\n",
-      "DTM file 39 accessed. Execution time: 1154.23\n",
-      "DTM file 40 accessed. Execution time: 1154.53\n",
-      "DTM file 41 accessed. Execution time: 1154.85\n",
-      "DTM file 42 accessed. Execution time: 1155.14\n",
-      "All files accessed. Execution time: 1155.14\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Collect metadata from online GeoTIFF files in a Pandas DataFrame or load existing DataFrame\n",
-    "create_metadata_conditional = True\n",
+    "create_metadata_conditional = False\n",
     "if create_metadata_conditional:  # if True, create csv files with metadata\n",
     "    # Start the timer\n",
     "    start_time = timeit.default_timer()\n",
@@ -234,21 +140,14 @@
     "\n",
     "            # Display execution time\n",
     "            stop_time = timeit.default_timer()  # stop the timer\n",
-    "            print(f\"{data_type} file {file_no} accessed. Execution time: {stop_time-start_time:.2f}\")\n",
+    "            # print(f\"{data_type} file {file_no} accessed. Execution time: {stop_time-start_time:.2f}\")\n",
     "\n",
     "        # Save raw metadata to a csv file\n",
     "        metadata_df.to_csv(metadata_raw_file_path[data_type], sep=',', index=False)\n",
-    "    \n",
-    "else:\n",
-    "    # Initialize the dictionary to hold the DataFrames\n",
-    "    metadata_df_raw = {}\n",
-    "    # load existing DataFrame\n",
-    "    for data_type in dataset_url.keys():  # for both datasets\n",
-    "        metadata_df_raw[data_type] = pandas.read_csv(metadata_raw_file_path[data_type], sep=',', header=0)\n",
     "        \n",
-    "# Total execution time\n",
-    "stop_time = timeit.default_timer()\n",
-    "print(f\"All files accessed. Execution time: {stop_time-start_time:.2f}\")"
+    "        # Total execution time\n",
+    "        stop_time = timeit.default_timer()\n",
+    "        print(f\"All files accessed. Execution time: {stop_time-start_time:.2f}\")"
    ]
   },
   {
@@ -261,12 +160,12 @@
     "# Load raw metadata from csv file\n",
     "metadata_df_raw_loaded = {}\n",
     "for data_type in dataset_url.keys():  # for both datasets\n",
-    "    metadata_df_raw_loaded[data_type] = pd.read_csv(metadata_raw_file_path[data_type], sep=',', header=0)"
+    "    metadata_df_raw_loaded[data_type] = pd.read_csv(metadata_raw_file_path[data_type], sep=',')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "id": "1d90a169",
    "metadata": {},
    "outputs": [],
@@ -295,216 +194,50 @@
     "    \n",
     "# Save processed metadata to a csv file\n",
     "for data_type in dataset_url.keys():  # for both datasets\n",
-    "    metadata_df_processed[data_type].to_csv(metadata_processed_file_path[data_type], sep=',', index=False)"
+    "    metadata_df_processed[data_type].to_csv(metadata_processed_file_path[data_type], sep=',', header=True, index=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "id": "6a0b4b23",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>dsm_file_name</th>\n",
-       "      <th>dsm_file_link</th>\n",
-       "      <th>dtm_file_name</th>\n",
-       "      <th>dtm_file_link</th>\n",
-       "      <th>coord_system</th>\n",
-       "      <th>height</th>\n",
-       "      <th>width</th>\n",
-       "      <th>bottom</th>\n",
-       "      <th>top</th>\n",
-       "      <th>left</th>\n",
-       "      <th>right</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>file_number</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>DHMVIIDSMRAS1m_k01.zip</td>\n",
-       "      <td>zip+https://downloadagiv.blob.core.windows.net...</td>\n",
-       "      <td>DHMVIIDTMRAS1m_k01.zip</td>\n",
-       "      <td>zip+https://downloadagiv.blob.core.windows.net...</td>\n",
-       "      <td>EPSG:31370</td>\n",
-       "      <td>9000</td>\n",
-       "      <td>17000</td>\n",
-       "      <td>238000.0</td>\n",
-       "      <td>247000.0</td>\n",
-       "      <td>145000.0</td>\n",
-       "      <td>162000.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>DHMVIIDSMRAS1m_k02.zip</td>\n",
-       "      <td>zip+https://downloadagiv.blob.core.windows.net...</td>\n",
-       "      <td>DHMVIIDTMRAS1m_k02.zip</td>\n",
-       "      <td>zip+https://downloadagiv.blob.core.windows.net...</td>\n",
-       "      <td>EPSG:31370</td>\n",
-       "      <td>12000</td>\n",
-       "      <td>32000</td>\n",
-       "      <td>238000.0</td>\n",
-       "      <td>250000.0</td>\n",
-       "      <td>162000.0</td>\n",
-       "      <td>194000.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>DHMVIIDSMRAS1m_k03.zip</td>\n",
-       "      <td>zip+https://downloadagiv.blob.core.windows.net...</td>\n",
-       "      <td>DHMVIIDTMRAS1m_k03.zip</td>\n",
-       "      <td>zip+https://downloadagiv.blob.core.windows.net...</td>\n",
-       "      <td>EPSG:31370</td>\n",
-       "      <td>10000</td>\n",
-       "      <td>12000</td>\n",
-       "      <td>238000.0</td>\n",
-       "      <td>248000.0</td>\n",
-       "      <td>194000.0</td>\n",
-       "      <td>206000.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>DHMVIIDSMRAS1m_k04.zip</td>\n",
-       "      <td>zip+https://downloadagiv.blob.core.windows.net...</td>\n",
-       "      <td>DHMVIIDTMRAS1m_k04.zip</td>\n",
-       "      <td>zip+https://downloadagiv.blob.core.windows.net...</td>\n",
-       "      <td>EPSG:31370</td>\n",
-       "      <td>7500</td>\n",
-       "      <td>13000</td>\n",
-       "      <td>218000.0</td>\n",
-       "      <td>225500.0</td>\n",
-       "      <td>53000.0</td>\n",
-       "      <td>66000.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>DHMVIIDSMRAS1m_k05.zip</td>\n",
-       "      <td>zip+https://downloadagiv.blob.core.windows.net...</td>\n",
-       "      <td>DHMVIIDTMRAS1m_k05.zip</td>\n",
-       "      <td>zip+https://downloadagiv.blob.core.windows.net...</td>\n",
-       "      <td>EPSG:31370</td>\n",
-       "      <td>14000</td>\n",
-       "      <td>32000</td>\n",
-       "      <td>218000.0</td>\n",
-       "      <td>232000.0</td>\n",
-       "      <td>66000.0</td>\n",
-       "      <td>98000.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                      dsm_file_name  \\\n",
-       "file_number                           \n",
-       "1            DHMVIIDSMRAS1m_k01.zip   \n",
-       "2            DHMVIIDSMRAS1m_k02.zip   \n",
-       "3            DHMVIIDSMRAS1m_k03.zip   \n",
-       "4            DHMVIIDSMRAS1m_k04.zip   \n",
-       "5            DHMVIIDSMRAS1m_k05.zip   \n",
-       "\n",
-       "                                                 dsm_file_link  \\\n",
-       "file_number                                                      \n",
-       "1            zip+https://downloadagiv.blob.core.windows.net...   \n",
-       "2            zip+https://downloadagiv.blob.core.windows.net...   \n",
-       "3            zip+https://downloadagiv.blob.core.windows.net...   \n",
-       "4            zip+https://downloadagiv.blob.core.windows.net...   \n",
-       "5            zip+https://downloadagiv.blob.core.windows.net...   \n",
-       "\n",
-       "                      dtm_file_name  \\\n",
-       "file_number                           \n",
-       "1            DHMVIIDTMRAS1m_k01.zip   \n",
-       "2            DHMVIIDTMRAS1m_k02.zip   \n",
-       "3            DHMVIIDTMRAS1m_k03.zip   \n",
-       "4            DHMVIIDTMRAS1m_k04.zip   \n",
-       "5            DHMVIIDTMRAS1m_k05.zip   \n",
-       "\n",
-       "                                                 dtm_file_link coord_system  \\\n",
-       "file_number                                                                   \n",
-       "1            zip+https://downloadagiv.blob.core.windows.net...   EPSG:31370   \n",
-       "2            zip+https://downloadagiv.blob.core.windows.net...   EPSG:31370   \n",
-       "3            zip+https://downloadagiv.blob.core.windows.net...   EPSG:31370   \n",
-       "4            zip+https://downloadagiv.blob.core.windows.net...   EPSG:31370   \n",
-       "5            zip+https://downloadagiv.blob.core.windows.net...   EPSG:31370   \n",
-       "\n",
-       "             height  width    bottom       top      left     right  \n",
-       "file_number                                                         \n",
-       "1              9000  17000  238000.0  247000.0  145000.0  162000.0  \n",
-       "2             12000  32000  238000.0  250000.0  162000.0  194000.0  \n",
-       "3             10000  12000  238000.0  248000.0  194000.0  206000.0  \n",
-       "4              7500  13000  218000.0  225500.0   53000.0   66000.0  \n",
-       "5             14000  32000  218000.0  232000.0   66000.0   98000.0  "
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Compare the contents of metadata for DSM and DTM files\n",
     "# Check if columns other than file_name and file_link are equal\n",
     "df_DSM = metadata_df_processed['DSM']\n",
     "df_DTM = metadata_df_processed['DTM']\n",
     "datasets_match_conditional = df_DSM.iloc[:, 2:].equals(df_DTM.iloc[:, 2:])\n",
+    "\n",
     "# Rename columns file_name and file_link\n",
     "df_DSM = df_DSM.rename(columns={'file_name': 'dsm_file_name'})\n",
     "df_DSM = df_DSM.rename(columns={'file_link': 'dsm_file_link'})\n",
     "df_DTM = df_DTM.rename(columns={'file_name': 'dtm_file_name'})\n",
     "df_DTM = df_DTM.rename(columns={'file_link': 'dtm_file_link'})\n",
+    "\n",
     "# Merge the DataFrames\n",
-    "df_merged = pd.concat([df_DSM, df_DTM.iloc[:, :2]], axis=1, join=\"inner\").head()\n",
+    "df_merged = pd.concat([df_DSM, df_DTM.iloc[:, :2]], axis=1, join=\"inner\")\n",
+    "\n",
     "# Change column order\n",
     "columns = df_merged.columns.tolist()\n",
     "columns = columns[:2] + columns[9:11] + columns[2:9]\n",
-    "df_merged = df_merged[columns]\n",
-    "df_merged.head()"
+    "df_merged = df_merged[columns]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "id": "8235b7e6",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "# Save processed and merged metadata to a csv file\n",
-    "df_merged.to_csv(metadata_processed_merged_file_path, sep=',', index=False)"
+    "df_merged.to_csv(metadata_processed_merged_file_path, sep=',', header=True, index=True)"
    ]
   }
  ],
